# opensentry-cloud-node

./: .dockerignore  .env.example  .gitignore  AGENTS.md  COPYING  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config.example.yaml  docker-compose.yml
.github/workflows/: release.yml
docs/: README.md
docs/adr/: 0001-pi-software-encoding.md  0002-machine-id-encryption-key.md  0003-sqlite-recording-store.md
docs/runbooks/: local-mode-setup.md  video-not-showing.md
examples/: wsl_preflight_probe.rs
src/: dashboard.rs  error.rs  lib.rs  logging.rs  main.rs  paths.rs  service.rs
src/api/: client.rs  commands.rs  mod.rs  types.rs  websocket.rs
src/camera/: capture.rs  detector.rs  mod.rs  types.rs
src/camera/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/config/: mod.rs  settings.rs
src/dashboard/: commands.rs  handle.rs  mod.rs  render.rs  state.rs  types.rs
src/node/: mod.rs  runner.rs
src/server/: api.rs  http.rs  mod.rs
src/setup/: animations.rs  ffmpeg_installer.rs  mod.rs  platform.rs  recovery.rs  tui.rs  ui.rs  validator.rs  wsl_preflight.rs
src/storage/: database.rs  mod.rs  stats.rs
src/streaming/: codec_detector.rs  hls_generator.rs  hls_uploader.rs  mod.rs  motion_detector.rs  segment_uploader.rs  supervisor.rs
tests/: integration.rs
web/: index.html  package.json  tsconfig.tsbuildinfo
web/src/: App.tsx  main.tsx  styles.css
web/src/components/: HlsPlayer.tsx
web/src/lib/: api.ts
web/src/pages/: CamerasPage.tsx
wix/: License.rtf  main.wxs
