[package]
name = "opensentry-cloudnode"
version = "0.1.14"
edition = "2021"
authors = ["SourceBox LLC"]
description = "OpenSentry camera node for cloud-connected surveillance"
license = "GPL-3.0"
repository = "https://github.com/SourceBox-LLC/opensentry-cloud-node"
homepage = "https://opensentry-command.fly.dev"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
# default-features = false drops the `default-tls` (OpenSSL) feature so the
# Docker Alpine build doesn't need openssl-dev headers.  rustls-tls is pure
# Rust and works everywhere without a system TLS library.
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream", "blocking"] }

# WebSocket client
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HTTP server (for serving recordings locally)
warp = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
yaml-rust = "0.4"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
once_cell = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Bytes
bytes = "1"

# Base64 encoding (for snapshot image transfer over WebSocket)
base64 = "0.22"

# URL percent-encoding (for WebSocket query params with arbitrary key bytes)
percent-encoding = "2"

# System info
sysinfo = "0.30"

# Terminal UI
crossterm = "0.27"
inquire = "0.7"
indicatif = "0.17"
colored = "2.1"

# Archive extraction
zip = "0.6"

# Environment file loading
dotenvy = "0.15"

# Local storage database
rusqlite = { version = "0.31", features = ["bundled"] }

# Encryption (API key at rest)
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

# Raw V4L2 ioctl on Linux (camera capability detection).  Already pulled
# in transitively by tokio/reqwest, but we declare it directly so the
# unsafe ioctl call in src/camera/platform/linux.rs has a stable surface.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true