[package]
# Package name = binary name. The repo URL still says "opensentry-cloud-node"
# (rename deferred per the brand-transition note in MEMORY.md), but the
# product is now "SourceBox Sentry" and the binary that users invoke
# should reflect that. Going from `opensentry-cloudnode` to
# `sourcebox-sentry-cloudnode` keeps the binary name explicit + branded.
name = "sourcebox-sentry-cloudnode"
version = "0.1.39"
edition = "2021"
authors = ["SourceBox LLC"]
description = "SourceBox Sentry CloudNode — turns a USB webcam into a cloud-connected security camera."
license = "GPL-3.0"
repository = "https://github.com/SourceBox-LLC/opensentry-cloud-node"
homepage = "https://opensentry-command.fly.dev"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
# default-features = false drops the `default-tls` (OpenSSL) feature so the
# Docker Alpine build doesn't need openssl-dev headers.  rustls-tls is pure
# Rust and works everywhere without a system TLS library.
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream", "blocking"] }

# WebSocket client
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HTTP server (for serving recordings locally)
warp = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
yaml-rust = "0.4"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
once_cell = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Bytes
bytes = "1"

# Base64 encoding (for snapshot image transfer over WebSocket)
base64 = "0.22"

# URL percent-encoding (for WebSocket query params with arbitrary key bytes)
percent-encoding = "2"

# System info
sysinfo = "0.30"

# Terminal UI
crossterm = "0.27"
inquire = "0.7"
indicatif = "0.17"
colored = "2.1"

# Archive extraction
zip = "0.6"

# Environment file loading
dotenvy = "0.15"

# Local storage database
rusqlite = { version = "0.31", features = ["bundled"] }

# Encryption (API key at rest)
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

# Raw V4L2 ioctl on Linux (camera capability detection).  Already pulled
# in transitively by tokio/reqwest, but we declare it directly so the
# unsafe ioctl call in src/camera/platform/linux.rs has a stable surface.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# Windows-only: service control + non-blocking file logger.
#   - windows-service handles the Service Control Manager handshake
#     (Start/Stop notifications, status reporting). Used by src/service.rs
#     when the binary is invoked as a Windows Service via the `service`
#     subcommand.
#   - tracing-appender provides a daily-rolling file logger so the
#     service has *somewhere* to write — the standard `tracing` →
#     DashboardLayer path is TUI-only and a Service has no terminal.
[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.7"
tracing-appender = "0.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
# strip = "debuginfo" instead of "symbols" / true
#
# `strip = true` is equivalent to `strip = "symbols"`, which removes
# the entire COFF symbol table along with debuginfo. On Windows MSVC
# that breaks two things we want for a service binary:
#
#   1. Windows Error Reporting (WER) writes Application Error events
#      with the faulting module + offset; without symbols, the offset
#      is into a blob of unnamed code and can't be matched back to a
#      function. A service that crashes silently with no symbol info
#      is essentially undebuggable post-mortem.
#
#   2. Stack traces produced by `panic = "unwind"` need symbols to
#      resolve frame names. With `strip = "symbols"` they're empty.
#
# `strip = "debuginfo"` keeps the symbol table (small — symbols are
# names, ~10s of KB for our binary) and only drops the debuginfo
# sections (which are the bulk of debug bloat, MBs). That's the right
# trade-off for a release service binary: small enough to ship,
# debuggable when something goes wrong on a customer machine.
strip = "debuginfo"
# Generate line tables (function name + file/line) but not full
# debuginfo. WER and `windbg` use this to produce readable crash
# traces. ~1 MB of binary growth, worth every byte for a binary
# that runs as a Windows Service with no console for live debugging.
debug = 1

# ── cargo-wix MSI build configuration ───────────────────────────────
#
# `cargo wix` reads from this section but most of the knobs we care
# about — culture, no-build, locale — are CLI flags rather than metadata
# fields. The release.yml workflow passes them via the command line
# (`--culture en-US --no-build`).
#
# UpgradeCode and component GUIDs live in wix/main.wxs (NOT here) so
# they stay stable across releases — Windows Installer treats a changed
# UpgradeCode as a brand-new product, breaking the upgrade chain.
[package.metadata.wix]
# Reserved for future use. Empty today; kept so cargo-wix recognises
# this project as wix-aware and doesn't try to scaffold from scratch
# the next time someone runs `cargo wix init`.